Changelog
=========

0.6.5 (unreleased)
------------------

- remove yahoo explorer config (dead) [amleczko]
- add support for alternate multiligua tags [amleczko]


0.6.4 (2012-07-16)
------------------

 - fix small bugs in sitemap registrations [amleczko]
 - add images to sitemap generation [amleczko]

0.6.3 (2012-03-27)
------------------
- fix bug with perseo_itemtype method [fdelia]
 
0.6.2 (2011-12-21)
------------------
- fix mismatched tag [fdelia]

0.6.1 (2011-12-16)
------------------
- updated documentation [fdelia]

0.6.0 (2011-12-14)
------------------
- Changed seo icon [fdelia]
- Customized control-panel template for create the layout of nested fieldsets [fdelia]
- Added accordion and proper style to nested fieldsets in control-panel template [fdelia]
- Fixed layout of fields in control panel and in seo tab[fdelia]
- Fixed description and title of control panel [fdelia]
- Fixed description of keyword fields in control panel [fdelia]
- Fixed descriptions in control panel [fdelia]

0.5.0 (2011-10-19)
------------------
- Moved Schema.org customizations to collective.perseoschema package [fdelia]
- Added Plone4.1 compatibility for 'Plone SEO Control Panel Tool' security [fdelia]

0.4.1 (2011-09-28)
------------------
- Fixed bug on update event [fdelia]

0.4.0 (2011-09-27)
------------------

- Changed handling of sitemapxml properties of the objects that cause the change of sitemap.xml, for pinging [fdelia]
- Fixed bug with properties override [fdelia]

0.3.0 (2011-08-05)
------------------

- Customized some viewlet templates to insert itemscope, itemtype and itemprop attributes [fdelia]
- Customized main template to insert itemscope, itemtype and itemprop attributes [fdelia]
- Added some fields to Plone SEO control panel tool [fdelia]
- Customized rss template for manage the indexing of rss feeds, depending on the check in Plone SEO control panel tool [fdelia]